# cask_foundation

./: CMakeLists.txt  README.md  spec.md
include/cask/foundation/: register_component_store.hpp  register_event_queue.hpp  register_interpolated.hpp  register_serializable_resource.hpp  register_serializable_store.hpp
plugins/entity/: entity_plugin.cpp
plugins/event/: event_plugin.cpp
plugins/identity/: identity_plugin.cpp
plugins/interpolation/: interpolation_plugin.cpp
plugins/mesh/: mesh_plugin.cpp
plugins/project/: project_plugin.cpp
plugins/resource/: resource_plugin.cpp
plugins/serialization/: serialization_plugin.cpp
plugins/texture/: texture_plugin.cpp
spec/: plugin_test_context.hpp
spec/entity/: entity_plugin_spec.cpp
spec/event/: event_plugin_spec.cpp
spec/identity/: identity_plugin_spec.cpp
spec/interpolation/: interpolation_plugin_spec.cpp
spec/mesh/: mesh_plugin_spec.cpp
spec/project/: project_plugin_spec.cpp
spec/registration/: register_component_store_spec.cpp  register_event_queue_spec.cpp  register_interpolated_spec.cpp  register_serializable_resource_spec.cpp  register_serializable_store_spec.cpp
spec/resource/: resource_plugin_spec.cpp
spec/serialization/: serialization_plugin_spec.cpp
spec/texture/: texture_plugin_spec.cpp
